fix livesearch z-index

--- a/plonetheme/globms/theme/globms/css/globms.css
+++ b/plonetheme/globms/theme/globms/css/globms.css
@@ -323,6 +323,7 @@ input.searchField {
     position: absolute;
     right: 0;
     background: White;
+    z-index:50;
 }
 
 #LSResult fieldset {
